[package]
name = "concordium-rust-sdk"
version = "0.1.0"
authors = ["Concordium <developers@concordium.com>"]
edition = "2018"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.5"
prost = "0.8"
tokio = { version = "1.8.0", features = ["full"] }
futures = "0.3"
serde_json = "1.0.60"
serde = {version = "1", features = ["derive"]}
chrono = {version = "0.4", features = ["serde"] }
thiserror = "1"
hex = "0.4.3"
derive_more = "0.99"
semver = "1"
anyhow = "1.0"
# See https://github.com/serde-rs/json/issues/505 for how to be careful.
rust_decimal = { version = "=1.19", features = ["serde-float", "serde-arbitrary-precision"]}
ed25519-dalek = "1"
sha2 = "0.9"
rand = "0.7"
num = "0.4"
# Fix the transitive dependency of ed25519-dalek since version 1.4 does not work with
# rust 1.53. Once we update to rust 1.59+ this should be removed.
ed25519 = "=1.3"

tokio-postgres = { version = "^0.7.5", features = ["with-serde_json-1"] }

crypto_common = { version = "*", git ="https://github.com/Concordium/concordium-base.git", features = ["encryption"] }
id = { version = "*", git ="https://github.com/Concordium/concordium-base.git", default-features=false }
ecvrf = { version = "*", git ="https://github.com/Concordium/concordium-base.git" }
aggregate_sig = { version = "*", git ="https://github.com/Concordium/concordium-base.git" }
encrypted_transfers = { version = "*", git ="https://github.com/Concordium/concordium-base.git" }
eddsa_ed25519 = { version = "*", git ="https://github.com/Concordium/concordium-base.git" }
concordium-contracts-common = { version = "*", git ="https://github.com/Concordium/concordium-contracts-common.git", features = ["derive-serde"]}
random_oracle = { version = "*", git ="https://github.com/Concordium/concordium-base.git" }

misc_tools = { version = "*", git ="https://github.com/Concordium/concordium-base.git" }



[dev-dependencies]
structopt = "0.3"
clap = "2.33.3"
csv = "1.1"

[build-dependencies]
tonic-build = "0.5"
